--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,7 +13,6 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:tint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/btn_follow"
@@ -123,7 +122,7 @@
         android:text="@string/follow"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/iv_user_image"
-        app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_email_user" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_grid"
@@ -135,5 +134,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_follow" />
+
+    <TextView
+        android:id="@+id/tv_user_email_user"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toTopOf="@+id/btn_follow"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintStart_toStartOf="@+id/iv_user_image"
+        app:layout_constraintTop_toBottomOf="@+id/iv_user_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
